Fixed overflow

--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ main {
     );
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
 
 .parallax {
